Fix spacing on portfolio section.

--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,10 @@ body {
   font-family: 'Montserrat', Helvetica, sans-serif;
 }
 
+h2 {
+  color: #61bdd4;
+}
+
 a {
   transition: .3s ease;
 }
@@ -59,9 +63,7 @@ a {
 
 #about {
   padding-top: 5rem;
-  min-height: 100vh;
   max-height: 100%;
-  padding-bottom: 5rem;
 }
 
 #skillset {
@@ -147,11 +149,11 @@ a {
   padding-bottom: 70px;
   padding-left: 20px;
   padding-right: 20px;
-  height: 70vh;
 }
 
-h2 {
-  color: #61bdd4;
+#contact textarea {
+  height: 150px;
+
 }
 
 .social i {
